<resources>
    <string name="app_name">易用汇</string>
    <string name="app_name_testadd">易用汇test</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">抱歉，摄像头发生了错误。您可能需要重新启动易用汇</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book…</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found…</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode…</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network…</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="t_gprs_title">温馨提示</string>
    <string name="t_gprs_txt">"欢迎使用易用汇客户端软件，客户端的使用完全免费，在使用过程中会产生流量费用，费用请咨询当地运营商。是否允许建立连接？
温馨提示：如使用过程中需要使用二维码扫描功能，客户端会调用您手机的照相功能。"</string>
    <string name="t_gprs_prompt">不再提示</string>
    <string name="setting_market_pic_tip">以加速显示和节省流量</string>
    <string name="dialog_ok">确定</string>
    <string name="t_gprs_quit">退出</string>
    <string name="integral_rank">排行榜</string>
    <string name="integral_gold_rank">金币排行榜</string>
    <string name="integral_myrank">我的排名：%1$s位</string>
    <string name="rank_rank">排名</string>
    <string name="rank_id">用户</string>
    <string name="rank_gold">金币总数</string>
    <string name="day_lottery">每日抽奖</string>
    <string name="show_lottery">每日抽奖赢大礼</string>
    <string name="user_golds">您的金币:</string>
    <string name="gold">金币</string>
    <string name="and">还有</string>
    <string name="change_text">次机会</string>
    <string name="award_set">奖项设置：</string>
    <string name="washgold">1、淘金奖——最高奖励100金币。</string>
    <string name="lucky">2、幸运奖——数码礼品等实物大奖。</string>
    <string name="rule">活动规则：</string>
    <string name="rule1">1、每日三次抽奖机会，每次消耗3金币。</string>
    <string name="rule2">2、当天没有使用完的机会不累计至第二天。</string>
    <string name="prompt">温馨提示：如果金币不足，可以去“淘金”栏目赚金币哦！</string>
    <string name="integral_strategy">淘金手册</string>
    <string name="next_later">下次再说</string>
    <string name="continu_lottery">继续抽奖</string>
    <string name="prompt_golds">恭喜你获得%s个金币。</string>
    <string name="prompt_changes">你今天还有%s次机会，是否继续?</string>
    <string name="no_chances">您的抽奖机会已用完，明日再来吧！</string>
    <string name="no_chances2">感谢参与，明日再来</string>
    <string name="have_golds">恭喜你刮中%s金币！</string>
    <string name="no_golds">很遗憾，这次没有刮中！</string>
    <string name="not_enough_golds">您的金币数量不足，无法参与抽奖！</string>
    <string name="lottery_top_text">刮奖区域 ,左右刮一刮</string>
    <string name="persion_centre">个人中心</string>
    <string name="price_phonecharges">10话费=1000金币</string>
    <string name="exchange_commit">我要兑换</string>
    <string name="curr_total_coin">当前金币:</string>
    <string name="china_mobile">移动</string>
    <string name="china_unicom">联通</string>
    <string name="china_netcom">电信</string>
    <string name="please_input_phone_num">请输入手机号:</string>
    <string name="please_input_phone_num_again">重复输入手机号:</string>
    <string name="phonecharges_num">充值金额:</string>
    <string name="phonecharges_isp">充值类型:</string>
    <string name="yuan_10">10元</string>
    <string name="yuan_20">20元</string>
    <string name="yuan_30">30元</string>
    <string name="t_register_code_hint">输入收到的验证码</string>
    <string name="t_code">获取验证码</string>
    <string name="email_dialog_quit">取消</string>
    <string name="email_dialog_redo">重发邮件</string>
    <string name="email_dialog_ok">完成绑定</string>
    <string name="title_updatepwd">修改密码</string>
    <string name="t_updatepwd_old_hint">原密码：4-16位字母/数字/字符</string>
    <string name="t_updatepwd_new1_hint">新密码：4-16位字母/数字/字符</string>
    <string name="t_updatepwd_new2_hint">重复新密码：4-16位字母/数字/字符</string>
    <string name="t_find_phone_hint">输入您绑定的手机号码</string>
    <string name="t_find_phone_intro">短信可能会延迟，请耐心等候，如果长时间未收到短信，请在60S之后重新获取验证码</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="network_error">网络错误，请检查网络设置</string>
    <string name="set_network">设置网络</string>
    <string name="cancle">取消</string>
    <string name="soft_problem_sex_content">色情内容</string>
    <string name="soft_problem_violent_images">暴力图片</string>
    <string name="soft_problem_hate_content">令人讨厌的内容或攻击性内容</string>
    <string name="soft_problem_mobile_hazardous">对手机或数据有害</string>
    <string name="soft_problem_input_content">请输入具体情况</string>
    <string name="soft_problem_against_reason">其他反对理由</string>
</resources>