<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.gionee.aora.market.gui.view.ChildTitleView android:id="@+id/problemTitleBar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/problemTitleBar">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RadioGroup android:orientation="vertical" android:id="@+id/soft_problem_menu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkedButton="@+id/sex_content">
                <RadioButton android:id="@+id/sex_content" android:text="@string/soft_problem_sex_content" style="@style/feedback_RadioButton" />
                <RadioButton android:id="@+id/violent_images" android:text="@string/soft_problem_violent_images" style="@style/feedback_RadioButton" />
                <RadioButton android:id="@+id/hate_content" android:text="@string/soft_problem_hate_content" style="@style/feedback_RadioButton" />
                <RadioButton android:id="@+id/mobile_hazardous" android:text="@string/soft_problem_mobile_hazardous" style="@style/feedback_RadioButton" />
                <RadioButton android:id="@+id/against_reason" android:text="@string/soft_problem_against_reason" style="@style/feedback_RadioButton" />
            </RadioGroup>
            <EditText android:textSize="12.0dip" android:textColor="#ff000000" android:layout_gravity="center" android:id="@+id/against_reason_et" android:background="@drawable/feedback_edit_selector" android:paddingLeft="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:hint="@string/soft_problem_input_content" />
            <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:layout_gravity="center" android:id="@+id/soft_problem_refer" android:background="@drawable/soft_introduction_download_selector" android:layout_width="242.6dip" android:layout_height="37.299988dip" android:layout_marginTop="30.0dip" android:text="提交" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>