<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="#ffeeeeee" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <ImageView android:background="@drawable/phonecharges_exchange" android:layout_width="80.0dip" android:layout_height="80.0dip" android:scaleType="center" />
            <LinearLayout android:gravity="left|center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip">
                <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@+id/tv1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/curr_total_coin" android:layout_centerVertical="true" />
                    <TextView android:textSize="16.0sp" android:textColor="#ffffb400" android:id="@+id/curr_coin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="" android:layout_toRightOf="@+id/tv1" android:layout_centerVertical="true" />
                </RelativeLayout>
                <TextView android:textSize="13.0sp" android:textColor="#ff8b8e95" android:id="@+id/price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/price_phonecharges" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="right|center" android:layout_width="fill_parent" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/phonecharges_isp" />
                <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="right|center" android:layout_width="fill_parent" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/phonecharges_num" />
                <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="right|center" android:layout_width="fill_parent" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/please_input_phone_num" />
                <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:gravity="right|center" android:layout_width="fill_parent" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:text="@string/please_input_phone_num_again" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <RadioGroup android:orientation="horizontal" android:id="@+id/phonecharge_type" android:layout_width="157.0dip" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:singleLine="true">
                    <RadioButton android:textColor="#ffffffff" android:gravity="center" android:id="@+id/charge_cm" android:background="@drawable/phone_charges_radiobutton_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="6.0dip" android:button="@null" android:text="@string/china_mobile" android:layout_weight="1.0" />
                    <RadioButton android:textColor="#ffffffff" android:gravity="center" android:id="@+id/charge_cu" android:background="@drawable/phone_charges_radiobutton_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:button="@null" android:text="@string/china_unicom" android:layout_weight="1.0" />
                    <RadioButton android:textColor="#ffffffff" android:gravity="center" android:id="@+id/charge_ct" android:background="@drawable/phone_charges_radiobutton_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="6.0dip" android:button="@null" android:text="@string/china_netcom" android:layout_weight="1.0" />
                </RadioGroup>
                <RadioGroup android:orientation="horizontal" android:id="@+id/phonecharge_num" android:layout_width="157.0dip" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:singleLine="true">
                    <RadioButton android:textColor="#ffffffff" android:gravity="center" android:id="@+id/charge_10" android:background="@drawable/phone_charges_radiobutton_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginRight="6.0dip" android:button="@null" android:text="@string/yuan_10" android:layout_weight="1.0" />
                    <RadioButton android:textColor="#ffffffff" android:gravity="center" android:id="@+id/charge_20" android:background="@drawable/phone_charges_radiobutton_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:button="@null" android:text="@string/yuan_20" android:layout_weight="1.0" />
                    <RadioButton android:textColor="#ffffffff" android:gravity="center" android:id="@+id/charge_30" android:background="@drawable/phone_charges_radiobutton_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="6.0dip" android:button="@null" android:text="@string/yuan_30" android:layout_weight="1.0" />
                </RadioGroup>
                <EditText android:id="@+id/phone_num" android:background="@drawable/exchange_edittext_bg" android:layout_width="157.0dip" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:singleLine="true" android:maxLength="11" android:digits="0123456789" android:inputType="phone" />
                <EditText android:id="@+id/phone_num_again" android:background="@drawable/exchange_edittext_bg" android:layout_width="157.0dip" android:layout_height="32.0dip" android:layout_marginTop="20.0dip" android:singleLine="true" android:maxLength="11" android:digits="0123456789" android:inputType="phone" />
            </LinearLayout>
        </LinearLayout>
        <Button android:textSize="15.0dip" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@+id/commitbtn" android:background="@drawable/integral_main_sign_btn_selector" android:layout_width="115.0dip" android:layout_height="30.0dip" android:layout_marginTop="40.0dip" android:text="@string/exchange_commit" />
    </LinearLayout>
</ScrollView>