<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/network_error_dialog_shape" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/warm_prompt" />
    <View android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="3.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="3.0dip" />
    <TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/network_error" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="8.0dip">
        <Button android:textColor="#ff000000" android:id="@+id/set_network_btn" android:background="@drawable/manager_check_ignore_btn_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginRight="10.0dip" android:text="@string/set_network" android:layout_weight="1.0" />
        <Button android:textColor="#ff000000" android:id="@+id/cancle_btn" android:background="@drawable/manager_check_ignore_btn_selector" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="15.0dip" android:text="@string/cancle" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>