<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="@color/dialog_des_text" android:id="@+id/message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="@string/t_gprs_txt" />
    </ScrollView>
    <TextView android:textSize="12.0sp" android:textColor="@color/soft_app_size_color" android:id="@+id/setting_market_pic_tip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/setting_market_pic_tip" />
    <CheckBox android:textColor="@color/dialog_des_text" android:id="@+id/gprs_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:checked="true" android:button="@drawable/setting_checkbox_selector" android:text="@string/t_gprs_prompt" />
</LinearLayout>