<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/content_bg" android:paddingLeft="14.299988dip" android:paddingTop="40.0dip" android:paddingRight="14.299988dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textSize="13.299988dip" android:textColorHint="@color/hint_text_color" android:id="@+id/find_phone" android:background="@drawable/user_edittext_bg" android:paddingLeft="11.699982dip" android:layout_width="fill_parent" android:layout_height="37.69998dip" android:hint="@string/t_find_phone_hint" android:singleLine="true" android:maxLength="11" android:inputType="phone" />
    <LinearLayout android:id="@+id/find_phone_lay" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginTop="29.0dip" android:layout_below="@id/find_phone">
        <EditText android:textSize="13.299988dip" android:textColorHint="@color/hint_text_color" android:layout_gravity="center_vertical" android:id="@+id/find_phone_code_et1" android:background="@drawable/user_edittext_bg" android:paddingLeft="11.699982dip" android:layout_width="0.0dip" android:layout_height="37.69998dip" android:hint="@string/t_register_code_hint" android:singleLine="true" android:layout_weight="2.0" android:inputType="number" />
        <Button android:textSize="16.699982dip" android:textColor="@color/white" android:id="@+id/find_phone_code_btn" android:background="@drawable/code_btn_bg" android:layout_width="0.0dip" android:layout_height="41.69998dip" android:layout_marginLeft="15.0dip" android:text="@string/t_code" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:textSize="13.299988dip" android:textColor="@color/ranktop" android:id="@+id/find_phone_code_intro" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="19.699982dip" android:text="@string/t_find_phone_intro" android:layout_below="@id/find_phone_lay" />
    <Button android:textSize="20.0dip" android:textColor="@color/white" android:id="@+id/findphoneok" android:background="@drawable/btn_selector_bg" android:layout_width="fill_parent" android:layout_height="41.69998dip" android:layout_marginLeft="23.699982dip" android:layout_marginTop="50.0dip" android:layout_marginRight="23.699982dip" android:text="@string/dialog_ok" android:layout_below="@id/find_phone_code_intro" />
    <TextView android:textSize="16.699982dip" android:textColor="@color/jump_text_color" android:id="@+id/find_phone_register" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="28.399994dip" android:layout_marginTop="19.699982dip" android:text="注册新账号？" android:layout_below="@id/findphoneok" />
    <TextView android:textSize="13.299988dip" android:textColor="@color/ranktop" android:id="@+id/find_phone_register_intro" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="9.699982dip" android:text="只需两步即可注册正式账号并获得金币" android:layout_below="@id/find_phone_register" android:layout_alignLeft="@+id/find_phone_register" />
</RelativeLayout>